# rkcodec

./: .gitignore  CMakeLists.txt  README.md  main.c  mpi_common.h  rkcodec.c  rkcodec.h
cmake/: FindJemalloc.cmake  Findrockchip_mpp.cmake  Finduv.cmake
